fix: legend notice on mobile

--- a/index.html
+++ b/index.html
@@ -405,7 +405,10 @@
             </div>
         </div>
 
-        <div class="legend-notice">✅ = adapted<span class="separator"></span>❎ = partly "adapted" (= as a flashback)</div>
+        <div class="legend-notice">
+            ✅ = adapted
+            <span>❎ = partly "adapted" (= as a flashback)</span>
+        </div>
     </div>
 
     <!-- Specials & Movies Tab -->
